[package]
name = "connector-main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
async-std = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["time"] }
tracing = "0.1"

fluvio = { git = "https://github.com/infinyon/fluvio", rev = "v0.13.0" }
fluvio-connector-common = { git = "https://github.com/infinyon/fluvio", rev = "v0.13.0", features = ["derive"]}

external-lib = { path = "../external-lib"}
